Adapt to latest changes of caselaw ldml (#1954)